# Codex-Subagent-Orchestrator

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CLAUDE.md.bak  CLAUDE_new.md  README.md  deep-thinking-tokens-guide.md  dummy-spec.json  gemini-subagent-orchestrator.skill  plan-discussion-system.md  plan-queue-runner-ts.md  problem-resolution-log.md  wki.config.json
Projects/Trading Value/: README.md  RESUME.md  ablation_timer.html  auto_trading_state_machine_design.md  breakthrough-guide.md  coin_strategy_spec.md  coin_strategy_spec_v2.md  limits-history.md  pyproject.toml  reusable_components_guide.md
Projects/Trading Value/MTS-V1/: .gitignore  BACKTEST_VERDICT.md  CODEX_BRIEFS.md  IMPLEMENTATION_PLAN_1_TO_9.md  REPORT.md  REVIEW_FOR_CODEX.md  SPEC_V5.md  backtest_runner.py  btc_parity_diff.py  btc_parity_trace.py  config.yaml  core5_parity_report.py  cvd_input_parity_report.py  mts_paper_runner.py  mts_profile.py  offline_replay.py  parity_check.py  parity_report.md  parity_summary.md  risk_gate.py  state.json.example  strategy.pine  strategy.py
Projects/Trading Value/archive/: alternative_paradigm_research.md  btc_alpha_research.md  rl_learning_log.md
Projects/Trading Value/config/: default.toml
Projects/Trading Value/data/: _discuss_spec.json  btc_funding_cache.json  conviction_amzn.json  conviction_btc.json  conviction_eth.json  conviction_nvda.json  dashboard.html  dl_amzn_cnn.pt  dl_btc_lstm.pt  dl_btc_patchtst.pt  dl_nvda_transformer.pt  effectiveness.jsonl  model_history.jsonl  paper_all_log.jsonl  paper_btc_state.json  paper_btc_v2_state.json  (+24 more)
(+2149 files in other folders)
